# pdf-compressor

./: .env.example  .gitignore  .pre-commit-config.yaml  pyproject.toml  readme.md  setup.cfg
.github/workflows/: ci.yml  link-check.yml  publish.yml  test.yml
pdf_compressor/: __init__.py  ilovepdf.py  main.py  utils.py
tests/: test_main.py  test_utils.py
