[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-compressor"
version = "0.3.0"
description = "CLI + Python API for batch compressing PDFs with iLovePDF.com"
authors = [{ name = "Janosh Riebesell", email = "janosh.riebesell@gmail.com" }]
readme = "readme.md"
keywords = ["cli", "compression", "ilovepdf", "pdf"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
]
requires-python = ">=3.9"
dependencies = ["requests >= 2.25.0"]
license = { file = "license" }

[project.urls]
Homepage = "https://github.com/janosh/pdf-compressor"
Package = "https://pypi.org/project/pdf-compressor"

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[project.scripts]
pdf-compressor = "pdf_compressor:main"

[tool.setuptools.packages]
find = { include = ["pdf_compressor*"], exclude = ["tests*"] }

[tool.distutils.bdist_wheel]
universal = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:warnings"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = false

[tool.ruff]
target-version = "py39"
select = [
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "D",    # pydocstyle
    "E",    # pycodestyle error
    "EXE",  # flake8-executable
    "F",    # pyflakes
    "FA",   # flake8-future-annotations
    "FLY",  # flynt
    "I",    # isort
    "ICN",  # flake8-import-conventions
    "ISC",  # flake8-implicit-str-concat
    "PD",   # pandas-vet
    "PERF", # perflint
    "PIE",  # flake8-pie
    "PL",   # pylint
    "PT",   # flake8-pytest-style
    "PYI",  # flakes8-pyi
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "RSE",  # flake8-raise
    "RUF",  # Ruff-specific rules
    "SIM",  # flake8-simplify
    "SLOT", # flake8-slots
    "TCH",  # flake8-type-checking
    "TID",  # tidy imports
    "UP",   # pyupgrade
    "W",    # pycodestyle warning
    "YTT",  # flake8-2020
]
ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D205",   # 1 blank line required between summary line and description
    "PLR",    # pylint refactor
    "PT013",  # pytest-incorrect-pytest-import
    "SIM105", # Use contextlib.suppress(FileNotFoundError) instead of try-except-pass
]
pydocstyle.convention = "google"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["D103"]
